--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meu Site</title>
+
+    <title>Calendário de Jogos - NLW Copa</title>
   </head>
+  <link rel="stylesheet" href="./style.css" />
+
+  <!-- links para fontes externas de texto -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap"
+    rel="stylesheet"
+  />
+
   <body>
     <div id="app">
       <header>
-        <img src="./assets/logo.svg" alt="">
+        <img src="./assets/logo.svg" alt="" />
       </header>
       <main id="cards">
         <div class="card">
@@ -18,8 +29,19 @@
             <li>
               <img src="./assets/icon-brazil.svg" alt="Bandeira do Brasil" />
               <strong>16:00</strong>
-              <img src="" alt="" />
+              <img src="./assets/icon-serbia.svg" alt="Bandeira do Sérvia" />
             </li>
+
+            <!-- <li>
+              <img src="./assets/icon-brazil.svg" alt="Bandeira do Brasil" />
+              <strong>16:00</strong>
+              <img src="./assets/icon-serbia.svg" alt="Bandeira do Sérvia" />
+            </li>
+            <li>
+              <img src="./assets/icon-brazil.svg" alt="Bandeira do Brasil" />
+              <strong>16:00</strong>
+              <img src="./assets/icon-serbia.svg" alt="Bandeira do Sérvia" />
+            </li> -->
           </ul>
         </div>
       </main>
