--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Calendário de Jogos - NLW Copa</title>
-  </head>
-  <link rel="stylesheet" href="./style.css" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- links para fontes externas de texto -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap"
-    rel="stylesheet"
-  />
+  <title>Calendário de Jogos - NLW Copa</title>
+</head>
+<link rel="stylesheet" href="./style.css" />
 
-  <body>
-    <div id="app"></div>
-    <script src="./script.js"></script>
-  </body>
+<!-- links para fontes externas de texto -->
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet" />
+
+<body>
+  <div id="app">
+    <header>
+      <img src="./assets/logo.svg" alt="" />
+    </header>
+    <main id="cards"></main>
+  </div>
+  <script src="./script.js"></script>
+</body>
+
 </html>
